# IMChat

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  IChat_pending_changes.md  README.md  docker-bake.hcl  docker-compose.override.yml  docker-compose.services.yml  docker-compose.yml  go.mod  go.sum  kustomization.yaml  non_precision_routing_summary.md  pyproject.toml  todolist.txt  unsync.txt  warn.txt
.github/workflows/: cd.yml  ci-build.yml  ci-check.yml  ci.yml
cmd/: start.sh
cmd/migrate/: main.go
cmd/websocket/: Dockerfile  main.go
deploy/k8s/: apisix-routes.yaml  im2-apis.yaml  im2-rpcs.yaml
docker/: docker-compose.services.yml
docker/livekit/: caddy.yaml  docker-compose.yaml  livekit.yaml  redis.conf
docker/mysql/: init-im.sql  init-imchat.sql
docker/redis/: redis.conf  users.acl
interceptor/: error.go
internal/: cmd.sh  common.proto
internal/Entity/: conversation.go  friend_apply.go  group.go  group_member.go  message.go
internal/common/: common.pb.go  tool.go
internal/middleware/: jwt.go  ws_session.go
internal/model/: conversation.go  friend_apply.go  group.go  group_apply.go  group_invite.go  group_member.go  id_segment.go  message.go  session.go  user.go  user_friend.go
middleware/: cors.go  jwt.go  ws_session.go
pkg/common/: common.pb.go  common.proto  session.go
pkg/configParser/: etcd.go  factory.go  factory_test.go  file.go  nacos.go  parser.go
pkg/env/: env.go
pkg/logger/: logger.go
pkg/nats/: client.go  nats.go  notifier.go
scripts/: docker.sh  gen-proto.sh  generate_env_secret.sh  goctl-gen.sh
(+463 files in other folders)
