[project]
name = "im2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "nacos-sdk-python>=3.0.4",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "uvicorn>=0.42.0",
    "volcengine-python-sdk[ark]>=5.0.17",
]
